// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendModal should display send modal form 1`] = `
<actionmodal-stub
  featureflag="send"
  id="send-modal"
  notifymessage="[object Object]"
  rewards=""
  selecteddenom="STAKE"
  submissionerrorprefix="Sending tokens failed"
  title="Send"
  transactiondata="[object Object]"
  transactiontype="SendTx"
  validate="function () { [native code] }"
>
  <tmformgroup-stub
    class="action-modal-form-group"
    fieldid="send-address"
    fieldlabel="Send To"
  >
    <tmfield-stub
      id="send-address"
      placeholder="Address or Starname"
      type="text"
      value=""
    />
     
    <!---->
     
    <span
      class="memo-span"
    >
      
      Lunie supports
      
      <a
        href="https://starname.me/"
        target="_blank"
      >
        IOV Starnames
      </a>
    </span>
  </tmformgroup-stub>
   
  <tmformgroup-stub
    class="action-modal-form-group"
    fieldid="amount"
    fieldlabel="Amount"
    id="form-group-amount"
  >
    <tmfieldgroup-stub>
      <tmfield-stub
        class="tm-field-addon"
        id="amount"
        placeholder="0"
        type="number"
      />
       
      <tmfield-stub
        class="tm-field-token-selector"
        id="token"
        options="[object Object]"
        placeholder="Select the token"
        title="Select the token you wish to operate with"
        type="select"
        value="STAKE"
      />
       
      <tmbtn-stub
        class="addon-max"
        customclass=""
        type="button"
        value="Set Max"
      />
    </tmfieldgroup-stub>
     
    <!---->
  </tmformgroup-stub>
   
  <tmformgroup-stub
    class="action-modal-group"
    fieldid="memo"
    fieldlabel="Memo"
    id="memo"
  >
    <tmfield-stub
      id="memo"
      type="text"
      value=""
    />
     
    <span
      class="memo-span"
    >
      To learn more about how to use the memo field, read
      
      <a
        href=" https://intercom.help/lunie/en/articles/3776563-using-the-memo-option-when-sending-tokens-to-and-from-exchanges"
        rel="noopener norefferer"
        target="_blank"
      >
        our guide
      </a>
      .
    </span>
     
    <!---->
  </tmformgroup-stub>
</actionmodal-stub>
`;

exports[`SendModal validation should show address required error 1`] = `
<actionmodal-stub
  amount="2"
  featureflag="send"
  id="send-modal"
  notifymessage="[object Object]"
  rewards=""
  selecteddenom="STAKE"
  submissionerrorprefix="Sending tokens failed"
  title="Send"
  transactiondata="[object Object]"
  transactiontype="SendTx"
  validate="function () { [native code] }"
>
  <tmformgroup-stub
    class="action-modal-form-group"
    error="true"
    fieldid="send-address"
    fieldlabel="Send To"
  >
    <tmfield-stub
      id="send-address"
      placeholder="Address or Starname"
      type="text"
      value=""
    />
     
    <tmformmsg-stub
      msg=""
      name="Address"
      type="required"
    />
     
    <span
      class="memo-span"
    >
      
      Lunie supports
      
      <a
        href="https://starname.me/"
        target="_blank"
      >
        IOV Starnames
      </a>
    </span>
  </tmformgroup-stub>
   
  <tmformgroup-stub
    class="action-modal-form-group"
    fieldid="amount"
    fieldlabel="Amount"
    id="form-group-amount"
  >
    <tmfieldgroup-stub>
      <tmfield-stub
        class="tm-field-addon"
        id="amount"
        placeholder="0"
        type="number"
        value="2"
      />
       
      <tmfield-stub
        class="tm-field-token-selector"
        id="token"
        options="[object Object]"
        placeholder="Select the token"
        title="Select the token you wish to operate with"
        type="select"
        value="STAKE"
      />
       
      <tmbtn-stub
        class="addon-max"
        customclass=""
        type="button"
        value="Set Max"
      />
    </tmfieldgroup-stub>
     
    <!---->
  </tmformgroup-stub>
   
  <tmformgroup-stub
    class="action-modal-group"
    fieldid="memo"
    fieldlabel="Memo"
    id="memo"
  >
    <tmfield-stub
      id="memo"
      type="text"
      value=""
    />
     
    <span
      class="memo-span"
    >
      To learn more about how to use the memo field, read
      
      <a
        href=" https://intercom.help/lunie/en/articles/3776563-using-the-memo-option-when-sending-tokens-to-and-from-exchanges"
        rel="noopener norefferer"
        target="_blank"
      >
        our guide
      </a>
      .
    </span>
     
    <!---->
  </tmformgroup-stub>
</actionmodal-stub>
`;

exports[`SendModal validation should show an error if trying to send more then the max amount of tokens 1`] = `
<actionmodal-stub
  amount="1000"
  featureflag="send"
  id="send-modal"
  notifymessage="[object Object]"
  rewards=""
  selecteddenom="STAKE"
  submissionerrorprefix="Sending tokens failed"
  title="Send"
  transactiondata="[object Object]"
  transactiontype="SendTx"
  validate="function () { [native code] }"
>
  <tmformgroup-stub
    class="action-modal-form-group"
    error="true"
    fieldid="send-address"
    fieldlabel="Send To"
  >
    <tmfield-stub
      id="send-address"
      placeholder="Address or Starname"
      type="text"
      value="cosmos1thyn8gfapk2d0zsp6dysn99ynhcs2y759kwznx1234767"
    />
     
    <tmformmsg-stub
      msg="doesn't have a format known by Lunie"
      name="Address"
      type="custom"
    />
     
    <span
      class="memo-span"
    >
      
      Lunie supports
      
      <a
        href="https://starname.me/"
        target="_blank"
      >
        IOV Starnames
      </a>
    </span>
  </tmformgroup-stub>
   
  <tmformgroup-stub
    class="action-modal-form-group"
    fieldid="amount"
    fieldlabel="Amount"
    id="form-group-amount"
  >
    <tmfieldgroup-stub>
      <tmfield-stub
        class="tm-field-addon"
        id="amount"
        placeholder="0"
        type="number"
        value="1000"
      />
       
      <tmfield-stub
        class="tm-field-token-selector"
        id="token"
        options="[object Object]"
        placeholder="Select the token"
        title="Select the token you wish to operate with"
        type="select"
        value="STAKE"
      />
       
      <tmbtn-stub
        class="addon-max"
        customclass=""
        type="button"
        value="Set Max"
      />
    </tmfieldgroup-stub>
     
    <!---->
  </tmformgroup-stub>
   
  <tmformgroup-stub
    class="action-modal-group"
    fieldid="memo"
    fieldlabel="Memo"
    id="memo"
  >
    <tmfield-stub
      id="memo"
      type="text"
      value=""
    />
     
    <span
      class="memo-span"
    >
      To learn more about how to use the memo field, read
      
      <a
        href=" https://intercom.help/lunie/en/articles/3776563-using-the-memo-option-when-sending-tokens-to-and-from-exchanges"
        rel="noopener norefferer"
        target="_blank"
      >
        our guide
      </a>
      .
    </span>
     
    <!---->
  </tmformgroup-stub>
</actionmodal-stub>
`;

exports[`SendModal validation should show bech32 error when address is not bech32 1`] = `
<actionmodal-stub
  amount="2"
  featureflag="send"
  id="send-modal"
  notifymessage="[object Object]"
  rewards=""
  selecteddenom="STAKE"
  submissionerrorprefix="Sending tokens failed"
  title="Send"
  transactiondata="[object Object]"
  transactiontype="SendTx"
  validate="function () { [native code] }"
>
  <tmformgroup-stub
    class="action-modal-form-group"
    error="true"
    fieldid="send-address"
    fieldlabel="Send To"
  >
    <tmfield-stub
      id="send-address"
      placeholder="Address or Starname"
      type="text"
      value="cosmos1thyn8gfapk2d0zsp6dysn99ynhcs2y759kwznx1234767"
    />
     
    <tmformmsg-stub
      msg="doesn't have a format known by Lunie"
      name="Address"
      type="custom"
    />
     
    <span
      class="memo-span"
    >
      
      Lunie supports
      
      <a
        href="https://starname.me/"
        target="_blank"
      >
        IOV Starnames
      </a>
    </span>
  </tmformgroup-stub>
   
  <tmformgroup-stub
    class="action-modal-form-group"
    fieldid="amount"
    fieldlabel="Amount"
    id="form-group-amount"
  >
    <tmfieldgroup-stub>
      <tmfield-stub
        class="tm-field-addon"
        id="amount"
        placeholder="0"
        type="number"
        value="2"
      />
       
      <tmfield-stub
        class="tm-field-token-selector"
        id="token"
        options="[object Object]"
        placeholder="Select the token"
        title="Select the token you wish to operate with"
        type="select"
        value="STAKE"
      />
       
      <tmbtn-stub
        class="addon-max"
        customclass=""
        type="button"
        value="Set Max"
      />
    </tmfieldgroup-stub>
     
    <!---->
  </tmformgroup-stub>
   
  <tmformgroup-stub
    class="action-modal-group"
    fieldid="memo"
    fieldlabel="Memo"
    id="memo"
  >
    <tmfield-stub
      id="memo"
      type="text"
      value=""
    />
     
    <span
      class="memo-span"
    >
      To learn more about how to use the memo field, read
      
      <a
        href=" https://intercom.help/lunie/en/articles/3776563-using-the-memo-option-when-sending-tokens-to-and-from-exchanges"
        rel="noopener norefferer"
        target="_blank"
      >
        our guide
      </a>
      .
    </span>
     
    <!---->
  </tmformgroup-stub>
</actionmodal-stub>
`;
